# Epitech-makefile-generator

./: CMakeLists.txt  Make_generator  README  README.md  generator  install.sh  uninstall.sh
GUI/: make_gui
dev/: Make_generator.py
includes/: MakefileClass.hpp
sources/: MakefileClass.cpp  main.cpp
